<resources>
    <string name="app_name">AptChat</string>
    <string name="nav_menu_appt">Special Request</string>
    <string name="nav_menu_services">Services</string>
    <string name="nav_menu_technician">Technician</string>
    <string name="action_favorite">Add New Technician</string>
    <string name="action_settings">Action Settings</string>
    <string name="add_new_services_button_title">ADD A NEW SERVICE</string>
    <string name="services_settings_help_tittle">Help</string>
    <string name="service_name">Service Name:</string>
    <string name="duration">Duration:</string>
    <string name="service_type">Service Group:</string>
    <string name="nav_menu_Promotion">Promotion</string>
    <string name="nav_menu_Settings">Settings</string>
    <string name="nav_menu_purchase">Purchase</string>
    <string name="service_duration">DURATION</string>
    <string name="add_a_new_service_string">ADD A NEW SERVICE</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="spinner_hour">Hours</string>
    <string name="spinner_minutes">Minutes</string>
    <string name="service_duration_is_not_valid">Service duration cannot be blank, please check again!</string>
    <string name="service_name_is_not_valid">Service Name cannot be blank, please check again!</string>
    <string name="service_setting_refresh">REFRESH</string>
    <string-array name="hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="minutes">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="type_to_select">
        <item>GROUP A</item>
        <item>GROUP B</item>
        <item>GROUP C</item>
        <item>GROUP D</item>
        <item>GROUP E</item>
        <item>GROUP F</item>
        <item>GROUP G</item>
        <item>GROUP H</item>
        <item>GROUP I</item>
        <item>GROUP K</item>
        <item>GROUP L</item>
    </string-array>
</resources>
